# osdev-barebones

./: .clang-format  .clang-tidy  .codespellrc  .gitignore  .releaserc  CMakeLists.txt  CMakePresets.json  CONTRIBUTING.md  README.md
src/kernel/: CMakeLists.txt
src/kernel/aarch64/: CMakeLists.txt  kernel.c
src/kernel/i686/: CMakeLists.txt  boot.s  boot_lib.c  boot_lib.h  kernel.c  string_lib.c  string_lib.h  terminal_lib.c  terminal_lib.h
tools/cmake/: cmake-policy.cmake  format-targets.cmake  format.cmake  spell-targets.cmake
tools/cmake/files/: version.hpp.in  version_information.txt
tools/cmake/modules/: FindSphinx.cmake
tools/cmake/toolchains/: clang-aarch64-none-elf.cmake  clang-i686-none-elf.cmake
tools/emulation/: start_armv8.sh
tools/scripts/: clang-tidy.sh  cppcheck.sh  iwyu.sh
